<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mi_login"
        android:title="@string/login"
        app:showAsAction="never" />
    <item
        android:id="@+id/mi_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mi_logout"
        android:title="@string/logout" />
    <item
        android:id="@+id/mi_new_size"
        android:title="@string/choose_new_size"
        app:showAsAction="never" />
    <item
        android:id="@+id/mi_custom"
        android:title="@string/create_custom_game"
        app:showAsAction="never" />
    <item
        android:id="@+id/mi_download"
        android:title="@string/download_custom_game"
        app:showAsAction="never" />
    <item
        android:id="@+id/mi_usergames"
        android:title="@string/get_user_games"
        app:showAsAction="never" />
</menu>